--- a/portfolio.html
+++ b/portfolio.html
@@ -25,45 +25,45 @@
 
     <!-- Стилі css -->
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!-- Header -->
     <header class="header">
-      <div class="container header-container">
+      <div class="container header__container">
         <a class="logo link" href="index.html" lang="en">
-          <span class="logo-part">Web</span>Studio</a
+          <span class="logo__part">Web</span>Studio</a
         >
 
-        <nav class="header-nav">
-          <ul class="menu-list list">
-            <li class="menu-item">
-              <a class="menu-link link" href="./index.html">Студия</a>
+        <nav class="navigation">
+          <ul class="navigation__list list">
+            <li class="navigation__item">
+              <a class="navigation__link link" href="./index.html"
+                >Студия</a
+              >
             </li>
-            <li class="menu-item">
-              <a class="menu-link current link" href="./portfolio.html"
+            <li class="navigation__item">
+              <a class="navigation__link current link" href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
-            <li class="menu-item">
-              <a class="menu-link link" href="">Контакты</a>
+            <li class="navigation__item">
+              <a class="navigation__link link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="contact-header-list list">
-          <li class="header-item-mail">
-            <a
-              class="contact-header-link link"
-              href="mailto:info@devstudio.com"
-            >
-              <svg class="header-icon" width="16" height="12">
+        <ul class="header__contact list">
+          <li class="header__mail">
+            <a class="header__link link" href="mailto:info@devstudio.com">
+              <svg class="header__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="header-item-phone">
-            <a class="contact-header-link link" href="tel:+380961111111">
-              <svg class="header-icon" width="10" height="16">
+          <li class="header__phone">
+            <a class="header__link link" href="tel:+380961111111">
+              <svg class="header__icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 099 111 11 11</a
@@ -341,117 +341,75 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer">
-      <div class="container footer-container">
-        <div class="footer-logo-adress">
-          <a class="logo-footer link" href="index.html" lang="en"
-            ><span class="logo-part">Web</span>Studio</a
-          >
-          <address class="address">
-            <ul class="contacts-list list">
-              <li class="contacts-list-item map">
-                <a
-                  class="contacts-footer-link map link"
-                  href="https://goo.gl/maps/a1JVnRPQd5P11oBA7"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >г. Киев, пр-т Леси Украинки, 26</a
-                >
+      <footer class="footer">
+        <div class="container footer-container">
+          <div class="footer-logo-address">
+            <a class="logo-footer link" href="index.html" lang="en"><span class="logo__part">Web</span>Studio</a>
+            <address class="address">
+              <ul class="contacts-list list">
+                <li class="contacts-list-item">
+                  <a class="contacts-footer-link map link" href="https://goo.gl/maps/a1JVnRPQd5P11oBA7" target="_blank"
+                    rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                </li>
+                <li class="contacts-list-item">
+                  <a class="contacts-footer-link link" href="mailto:info@example.com">info@example.com</a>
+                </li>
+                <li class="contacts-list-item">
+                  <a class="contacts-footer-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+      
+          <div class="footer-join">
+            <h3 class="join-title">Присоединяйтесь</h3>
+            <ul class="join-list list">
+              <li class="join-item">
+                <a class="join-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка Instagram">
+                  <svg class="join-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="contacts-list-item">
-                <a
-                  class="contacts-footer-link link"
-                  href="mailto:info@example.com"
-                  >info@example.com</a
-                >
+              <li class="join-item">
+                <a class="join-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка Twitter">
+                  <svg class="join-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="contacts-list-item">
-                <a class="contacts-footer-link link" href="tel:+380991111111"
-                  >+38 099 111 11 11</a
-                >
+              <li class="join-item">
+                <a class="join-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка Facebook">
+                  <svg class="join-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="join-item">
+                <a class="join-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка Linkedin">
+                  <svg class="join-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-
-        <div class="footer-join">
-          <h3 class="join-title">Присоединяйтесь</h3>
-          <ul class="join-list list">
-            <li class="join-item">
-              <a
-                class="join-link link"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="иконка Instagram"
-              >
-                <svg class="join-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="join-item">
-              <a
-                class="join-link link"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="иконка Twitter"
-              >
-                <svg class="join-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="join-item">
-              <a
-                class="join-link link"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="иконка Facebook"
-              >
-                <svg class="join-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="join-item">
-              <a
-                class="join-link link"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="иконка Linkedin"
-              >
-                <svg class="join-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-
-        <form class="footer-form">
-          <b class="footer-form-title">Подпишитесь на рассылку</b>
-          <div class="footer-stroke">
-            <label class="footer-label">
-              <input
-                class="footer-input"
-                name="footer-email"
-                placeholder="E-mail"
-              />
-            </label>
-            <button class="footer-form-btn btn" type="submit">
-              <span class="btn-title">Подписаться</span>
-              <svg class="footer-form-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-send"></use>
-              </svg>
-            </button>
           </div>
-        </form>
-      </div>
-    </footer>
+          <form class="footer-form">
+            <b class="footer-form-title">Подпишитесь на рассылку</b>
+            <div class="footer-stroke">
+              <label class="footer-label">
+                <input class="footer-input" name="footer-email" placeholder="E-mail" />
+              </label>
+              <button class="footer-form-btn btn" type="submit">
+                <span class="btn-title">Подписаться</span>
+                <svg class="footer-form-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
+      </footer>
 
     <script src="./js/modal.js"></script>
   </body>
