corrected BEM classes' name

--- a/index.html
+++ b/index.html
@@ -31,39 +31,39 @@
     <!-- Header -->
     <header class="header">
       <div class="container header__container">
-        <a class="logo link" href="index.html" lang="en">
+        <a class="logo " href="index.html" lang="en">
           <span class="logo__part">Web</span>Studio</a
         >
 
         <nav class="navigation">
-          <ul class="navigation__list list">
-            <li class="navigation__item">
-              <a class="navigation__link current link" href="./index.html"
+          <ul class="site-nav ">
+            <li class="site-nav__item">
+              <a class="site-nav__link site-nav__link--current" href="./index.html"
                 >Студия</a
               >
             </li>
-            <li class="navigation__item">
-              <a class="navigation__link link" href="./portfolio.html"
+            <li class="site-nav__item">
+              <a class="site-nav__link " href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
-            <li class="navigation__item">
-              <a class="navigation__link link" href="">Контакты</a>
+            <li class="site-nav__item">
+              <a class="site-nav__link " href="">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="header__contact list">
-          <li class="header__mail">
-            <a class="header__link link" href="mailto:info@devstudio.com">
-              <svg class="header__icon" width="16" height="12">
+        <ul class="contact">
+          <li class="contact__item">
+            <a class="contact__link " href="mailto:info@devstudio.com">
+              <svg class="contact__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="header__phone">
-            <a class="header__link link" href="tel:+380961111111">
-              <svg class="header__icon" width="10" height="16">
+          <li class="contact__item">
+            <a class="contact__link " href="tel:+380961111111">
+              <svg class="contact__icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 099 111 11 11</a
@@ -161,12 +161,12 @@
       </section>
 
       <!--Our advantages  -->
-      <section class="advantages section">
-        <div class="container advantages__container">
+      <section class="section">
+        <div class="container">
           <h2 class="visually-hidden">Наши преимущества</h2>
-          <ul class="advantages__list list">
+          <ul class="advantages ">
             <li class="advantages__item">
-              <div class="advantages__img">
+              <div class="advantages__box">
                 <svg class="advantages__icon">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
@@ -178,7 +178,7 @@
               </p>
             </li>
             <li class="advantages__item">
-              <div class="advantages__img">
+              <div class="advantages__box">
                 <svg class="advantages__icon">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
@@ -190,7 +190,7 @@
               </p>
             </li>
             <li class="advantages__item">
-              <div class="advantages__img">
+              <div class="advantages__box">
                 <svg class="advantages__icon">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
@@ -202,7 +202,7 @@
               </p>
             </li>
             <li class="advantages__item">
-              <div class="advantages__img">
+              <div class="advantages__box">
                 <svg class="advantages__icon">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
@@ -218,10 +218,10 @@
       </section>
 
       <!-- What we do -->
-      <section class="services section">
-        <div class="container services__container">
-          <h2 class="section__title services__title">Чем мы занимаемся</h2>
-          <ul class="services__list list">
+      <section class="section section--no-padding-top">
+        <div class="container">
+          <h2 class="section__title ">Чем мы занимаемся</h2>
+          <ul class="services">
             <li class="services__item">
               <img
                 class="services__img"
@@ -263,10 +263,10 @@
       </section>
 
       <!-- Our team -->
-      <section class="team section">
+      <section class="section section--other-bckg">
         <div class="container">
-          <h2 class="section__title team__title">Наша команда</h2>
-          <ul class="team__list list">
+          <h2 class="section__title">Наша команда</h2>
+          <ul class="team ">
             <li class="team__item">
               <img
                 class="team__photo"
@@ -275,13 +275,13 @@
                 width="270"
                 height="260"
               />
-              <div class="team__description">
-                <h3 class="team__name">Игорь Демьяненко</h3>
-                <p class="team__position" lang="en">Product Designer</p>
-                <ul class="socials-group list">
+              <div class="team__box">
+                <h3 class="team__title">Игорь Демьяненко</h3>
+                <p class="team__text" lang="en">Product Designer</p>
+                <ul class="socials-group ">
                   <li class="socials-group__item">
                     <a
-                      class="socials-group__link link"
+                      class="socials-group__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -294,7 +294,7 @@
                   </li>
                   <li class="socials-group__item">
                     <a
-                      class="socials-group__link link"
+                      class="socials-group__link "
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -307,7 +307,7 @@
                   </li>
                   <li class="socials-group__item">
                     <a
-                      class="socials-group__link link"
+                      class="socials-group__link "
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -320,7 +320,7 @@
                   </li>
                   <li class="socials-group__item">
                     <a
-                      class="socials-group__link link"
+                      class="socials-group__link "
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -342,13 +342,13 @@
                 width="270"
                 height="260"
               />
-              <div class="team__description">
-                <h3 class="team__name">Ольга Репина</h3>
-                <p class="team__position" lang="en">Frontend Developer</p>
-                <ul class="socials-group list">
+              <div class="team__box">
+                <h3 class="team__title">Ольга Репина</h3>
+                <p class="team__text" lang="en">Frontend Developer</p>
+                <ul class="socials-group">
                   <li class="socials-group__item">
                     <a
-                      class="socials-group__link link"
+                      class="socials-group__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -361,7 +361,7 @@
                   </li>
                   <li class="socials-group__item">
                     <a
-                      class="socials-group__link link"
+                      class="socials-group__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -374,7 +374,7 @@
                   </li>
                   <li class="socials-group__item">
                     <a
-                      class="socials-group__link link"
+                      class="socials-group__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -387,7 +387,7 @@
                   </li>
                   <li class="socials-group__item">
                     <a
-                      class="socials-group__link link"
+                      class="socials-group__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -409,13 +409,13 @@
                 width="270"
                 height="260"
               />
-              <div class="team__description">
-                <h3 class="team__name">Николай Тарасов</h3>
-                <p class="team__position" lang="en">Marketing</p>
-                <ul class="socials-group list">
+              <div class="team__box">
+                <h3 class="team__title">Николай Тарасов</h3>
+                <p class="team__text" lang="en">Marketing</p>
+                <ul class="socials-group">
                   <li class="socials-group__item">
                     <a
-                      class="socials-group__link link"
+                      class="socials-group__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -428,7 +428,7 @@
                   </li>
                   <li class="socials-group__item">
                     <a
-                      class="socials-group__link link"
+                      class="socials-group__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -441,7 +441,7 @@
                   </li>
                   <li class="socials-group__item">
                     <a
-                      class="socials-group__link link"
+                      class="socials-group__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -454,7 +454,7 @@
                   </li>
                   <li class="socials-group__item">
                     <a
-                      class="socials-group__link link"
+                      class="socials-group__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -476,13 +476,13 @@
                 width="270"
                 height="260"
               />
-              <div class="team__description">
-                <h3 class="team__name">Михаил Ермаков</h3>
-                <p class="team__position" lang="en">UI Designer</p>
-                <ul class="socials-group list">
+              <div class="team__box">
+                <h3 class="team__title">Михаил Ермаков</h3>
+                <p class="team__text" lang="en">UI Designer</p>
+                <ul class="socials-group">
                   <li class="socials-group__item">
                     <a
-                      class="socials-group__link link"
+                      class="socials-group__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -495,7 +495,7 @@
                   </li>
                   <li class="socials-group__item">
                     <a
-                      class="socials-group__link link"
+                      class="socials-group__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -508,7 +508,7 @@
                   </li>
                   <li class="socials-group__item">
                     <a
-                      class="socials-group__link link"
+                      class="socials-group__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -521,7 +521,7 @@
                   </li>
                   <li class="socials-group__item">
                     <a
-                      class="socials-group__link link"
+                      class="socials-group__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -540,13 +540,13 @@
       </section>
 
       <!-- Our clients -->
-      <section class="clients section">
-        <div class="container clients_container">
-          <h2 class="section__title clients_title">Постоянные клиенты</h2>
-          <ul class="clients__list list">
+      <section class="section">
+        <div class="container">
+          <h2 class="section__title">Постоянные клиенты</h2>
+          <ul class="clients">
             <li class="clients__item">
               <a
-                class="clients__link link"
+                class="clients__link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
@@ -559,7 +559,7 @@
             </li>
             <li class="clients__item">
               <a
-                class="clients__link link"
+                class="clients__link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
@@ -572,7 +572,7 @@
             </li>
             <li class="clients__item">
               <a
-                class="clients__link link"
+                class="clients__link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
@@ -585,7 +585,7 @@
             </li>
             <li class="clients__item">
               <a
-                class="clients__link link"
+                class="clients__link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
@@ -598,7 +598,7 @@
             </li>
             <li class="clients__item">
               <a
-                class="clients__link link"
+                class="clients__link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
@@ -611,7 +611,7 @@
             </li>
             <li class="clients__item">
               <a
-                class="clients__link link"
+                class="clients__link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
@@ -635,10 +635,10 @@
             ><span class="logo__part">Web</span>Studio</a
           >
           <address class="address">
-            <ul class="contacts-list list">
+            <ul class="contacts-list">
               <li class="contacts-list-item">
                 <a
-                  class="contacts-footer-link map link"
+                  class="contacts-footer-link map"
                   href="https://goo.gl/maps/a1JVnRPQd5P11oBA7"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -647,13 +647,13 @@
               </li>
               <li class="contacts-list-item">
                 <a
-                  class="contacts-footer-link link"
+                  class="contacts-footer-link"
                   href="mailto:info@example.com"
                   >info@example.com</a
                 >
               </li>
               <li class="contacts-list-item">
-                <a class="contacts-footer-link link" href="tel:+380991111111"
+                <a class="contacts-footer-link" href="tel:+380991111111"
                   >+38 099 111 11 11</a
                 >
               </li>
@@ -663,10 +663,10 @@
 
         <div class="footer-join">
           <h3 class="join-title">Присоединяйтесь</h3>
-          <ul class="join-list list">
+          <ul class="join-list">
             <li class="join-item">
               <a
-                class="join-link link"
+                class="join-link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
@@ -679,7 +679,7 @@
             </li>
             <li class="join-item">
               <a
-                class="join-link link"
+                class="join-link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
@@ -692,7 +692,7 @@
             </li>
             <li class="join-item">
               <a
-                class="join-link link"
+                class="join-link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
@@ -705,7 +705,7 @@
             </li>
             <li class="join-item">
               <a
-                class="join-link link"
+                class="join-link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
