--- a/portfolio.html
+++ b/portfolio.html
@@ -35,34 +35,34 @@
         >
 
         <nav class="navigation">
-          <ul class="navigation__list list">
-            <li class="navigation__item">
-              <a class="navigation__link link" href="./index.html"
+          <ul class="site-nav">
+            <li class="site-nav__item">
+              <a class="site-nav__link" href="./index.html"
                 >Студия</a
               >
             </li>
-            <li class="navigation__item">
-              <a class="navigation__link current link" href="./portfolio.html"
+            <li class="site-nav__item">
+              <a class="site-nav__link site-nav__link--current" href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
-            <li class="navigation__item">
-              <a class="navigation__link link" href="">Контакты</a>
+            <li class="site-nav__item">
+              <a class="site-nav__link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="header__contact list">
-          <li class="header__mail">
-            <a class="header__link link" href="mailto:info@devstudio.com">
-              <svg class="header__icon" width="16" height="12">
+        <ul class="contact">
+          <li class="contact__item">
+            <a class="contact__link" href="mailto:info@devstudio.com">
+              <svg class="contact__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="header__phone">
-            <a class="header__link link" href="tel:+380961111111">
-              <svg class="header__icon" width="10" height="16">
+          <li class="contact__item">
+            <a class="contact__link" href="tel:+380961111111">
+              <svg class="contact__icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 099 111 11 11</a
@@ -76,7 +76,7 @@
       <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Портфолио</h1>
-          <ul class="btn-list list">
+          <ul class="btn-list">
             <li class="btn-list-item">
               <button class="button" type="button">Все</button>
             </li>
@@ -94,9 +94,9 @@
             </li>
           </ul>
 
-          <ul class="projects-list list">
+          <ul class="projects-list">
             <li class="projects-list-item">
-              <a class="project-list-link link" href="#">
+              <a class="project-list-link" href="#">
                 <div class="project-overlay">
                   <img
                     class="projects-example"
@@ -121,7 +121,7 @@
               </a>
             </li>
             <li class="projects-list-item">
-              <a class="project-list-link link" href="#">
+              <a class="project-list-link" href="#">
                 <div class="project-overlay">
                   <img
                     class="projects-example"
@@ -148,7 +148,7 @@
               </a>
             </li>
             <li class="projects-list-item">
-              <a class="project-list-link link" href="#">
+              <a class="project-list-link" href="#">
                 <div class="project-overlay">
                   <img
                     class="projects-example"
@@ -175,7 +175,7 @@
               </a>
             </li>
             <li class="projects-list-item">
-              <a class="project-list-link link" href="">
+              <a class="project-list-link" href="">
                 <div class="project-overlay">
                   <img
                     class="projects-example"
@@ -202,7 +202,7 @@
               </a>
             </li>
             <li class="projects-list-item">
-              <a class="project-list-link link" href="">
+              <a class="project-list-link" href="">
                 <div class="project-overlay">
                   <img
                     class="projects-example"
@@ -229,7 +229,7 @@
               </a>
             </li>
             <li class="projects-list-item">
-              <a class="project-list-link link" href="">
+              <a class="project-list-link" href="">
                 <div class="project-overlay">
                   <img
                     class="projects-example"
@@ -256,7 +256,7 @@
               </a>
             </li>
             <li class="projects-list-item">
-              <a class="project-list-link link" href="">
+              <a class="project-list-link" href="">
                 <div class="project-overlay">
                   <img
                     class="projects-example"
@@ -283,7 +283,7 @@
               </a>
             </li>
             <li class="projects-list-item">
-              <a class="project-list-link link" href="">
+              <a class="project-list-link" href="">
                 <div class="project-overlay">
                   <img
                     class="projects-example"
@@ -310,7 +310,7 @@
               </a>
             </li>
             <li class="projects-list-item">
-              <a class="project-list-link link" href="">
+              <a class="project-list-link" href="">
                 <div class="project-overlay">
                   <img
                     class="projects-example"
@@ -343,18 +343,18 @@
       <footer class="footer">
         <div class="container footer-container">
           <div class="footer-logo-address">
-            <a class="logo-footer link" href="index.html" lang="en"><span class="logo__part">Web</span>Studio</a>
+            <a class="logo-footer" href="index.html" lang="en"><span class="logo__part">Web</span>Studio</a>
             <address class="address">
-              <ul class="contacts-list list">
+              <ul class="contacts-list">
                 <li class="contacts-list-item">
-                  <a class="contacts-footer-link map link" href="https://goo.gl/maps/a1JVnRPQd5P11oBA7" target="_blank"
+                  <a class="contacts-footer-link map" href="https://goo.gl/maps/a1JVnRPQd5P11oBA7" target="_blank"
                     rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li class="contacts-list-item">
-                  <a class="contacts-footer-link link" href="mailto:info@example.com">info@example.com</a>
+                  <a class="contacts-footer-link" href="mailto:info@example.com">info@example.com</a>
                 </li>
                 <li class="contacts-list-item">
-                  <a class="contacts-footer-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                  <a class="contacts-footer-link" href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
               </ul>
             </address>
@@ -362,30 +362,30 @@
       
           <div class="footer-join">
             <h3 class="join-title">Присоединяйтесь</h3>
-            <ul class="join-list list">
+            <ul class="join-list">
               <li class="join-item">
-                <a class="join-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка Instagram">
+                <a class="join-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка Instagram">
                   <svg class="join-icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="join-item">
-                <a class="join-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка Twitter">
+                <a class="join-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка Twitter">
                   <svg class="join-icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="join-item">
-                <a class="join-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка Facebook">
+                <a class="join-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка Facebook">
                   <svg class="join-icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="join-item">
-                <a class="join-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка Linkedin">
+                <a class="join-link" href="" target="_blank" rel="noopener noreferrer" aria-label="иконка Linkedin">
                   <svg class="join-icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
